@@ -25,11 +25,9 @@ package com.cws.esolutions.security.utils;
  * ----------------------------------------------------------------------------
  * cws-khuntly          11/23/2008 22:39:20             Created.
  */
-import javax.crypto.Mac;
 import java.util.Base64;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
-import java.security.MessageDigest;
 import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.SecretKeySpec;
@@ -38,11 +36,11 @@ import javax.crypto.BadPaddingException;
 import javax.crypto.spec.IvParameterSpec;
 import java.security.InvalidKeyException;
 import java.security.AlgorithmParameters;
+import jakarta.xml.bind.DatatypeConverter;
 import javax.crypto.NoSuchPaddingException;
 import org.apache.logging.log4j.LogManager;
 import java.io.UnsupportedEncodingException;
 import javax.crypto.IllegalBlockSizeException;
-import org.apache.commons.codec.binary.Base32;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.InvalidParameterSpecException;
@@ -64,8 +62,7 @@ public final class PasswordUtils
     static final boolean DEBUG = DEBUGGER.isDebugEnabled();
 
     /**
-     * Provides two-way (reversible) encryption of a provided string. Can be used where reversibility
-     * is required but encryption (obfuscation, technically) is required.
+     * Provides an encryption method for given values
      *
      * @param value - The plain text data to encrypt
      * @param salt - The salt value to utilize for the request
@@ -93,7 +90,7 @@ public final class PasswordUtils
             DEBUGGER.debug("Value: {}", encoding);
         }
 
-        String combined = null;
+        String result = null;
 
         try
         {
@@ -107,10 +104,10 @@ public final class PasswordUtils
             AlgorithmParameters parameters = pbeCipher.getParameters();
             IvParameterSpec ivParameterSpec = parameters.getParameterSpec(IvParameterSpec.class);
 
-            byte[] cryptoText = pbeCipher.doFinal(encoding.getBytes());
+            byte[] cryptoText = pbeCipher.doFinal(new String(value).getBytes(encoding));
             byte[] iv = ivParameterSpec.getIV();
 
-            combined = PasswordUtils.base64Encode(Base64.getEncoder().encodeToString(iv) + ":" + Base64.getEncoder().encodeToString(cryptoText));
+            result = PasswordUtils.base64Encode(DatatypeConverter.printBase64Binary(iv) + ":" + DatatypeConverter.printBase64Binary(cryptoText));
         }
         catch (final InvalidKeyException ikx)
         {
@@ -140,62 +137,89 @@ public final class PasswordUtils
         {
             throw new SecurityException(ipsx.getMessage(), ipsx);
         }
+        catch (UnsupportedEncodingException uex)
+        {
+        	throw new SecurityException(uex.getMessage(), uex);
+		}
 
-        return combined;
+        return result;
     }
 
     /**
-     * Provides one-way (irreversible) encryption of a provided string.
+     * Provides an encryption method for given values
      *
-     * @param plainText - The plain text data to encrypt
+     * @param value - The plain text data to encrypt
      * @param salt - The salt value to utilize for the request
-     * @param instance - The security instance to utilize
-     * @param iterations - The number of times the value should be re-encrypted
+     * @param secretInstance - The cryptographic instance to use for the SecretKeyFactory
+     * @param iterations - The number of times to loop through the keyspec
+     * @param keyBits - The size of the key, in bits
+     * @param algorithm - The algorithm to encrypt the data with
+     * @param cipherInstance - The cipher instance to utilize
      * @param encoding - The text encoding
-     * @return The encrypted string
+     * @return The encrypted string in a reversible format
      * @throws SecurityException {@link java.lang.SecurityException} if an exception occurs during processing
      */
-    public static final String encryptText(final String plainText, final String salt, final String instance, final int iterations, final String encoding) throws SecurityException
+    public static final String decryptText(final String password, final char[] value, final byte[] salt, final String secretInstance, final int iterations, final int keyBits, final String algorithm, final String cipherInstance, final String encoding) throws SecurityException
     {
-        final String methodName = PasswordUtils.CNAME + "#encryptText(final String plainText, final String salt, final String algorithm, final String instance, final int iterations, final String encoding) throws SecurityException";
+        final String methodName = PasswordUtils.CNAME + "#decryptText(final String password, final char[] value, final byte[] salt, final String secretInstance, final int iterations, final int keyBits, final String algorithm, final String cipherInstance, final String encoding) throws SecurityException";
 
         if (DEBUG)
         {
             DEBUGGER.debug(methodName);
-            DEBUGGER.debug("Value: {}", plainText);
-            DEBUGGER.debug("Value: {}", salt);
-            DEBUGGER.debug("Value: {}", instance);
+            DEBUGGER.debug("Value: {}", secretInstance);
             DEBUGGER.debug("Value: {}", iterations);
+            DEBUGGER.debug("Value: {}", keyBits);
+            DEBUGGER.debug("Value: {}", algorithm);
+            DEBUGGER.debug("Value: {}", cipherInstance);
             DEBUGGER.debug("Value: {}", encoding);
         }
 
-        String response = null;
+        String result = null;
+        String base = PasswordUtils.base64Decode(password);
+        String iv = base.split(":")[0];
+        String property = base.split(":")[1];
 
         try
         {
-            MessageDigest md = MessageDigest.getInstance(instance);
-            md.reset();
-            md.update(salt.getBytes(encoding));
-            byte[] input = md.digest(plainText.getBytes(encoding));
+            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(secretInstance);
+            PBEKeySpec keySpec = new PBEKeySpec(value, salt, iterations, keyBits);
+            SecretKey keyTmp = keyFactory.generateSecret(keySpec);
+            SecretKeySpec sks = new SecretKeySpec(keyTmp.getEncoded(), algorithm);
+            Cipher pbeCipher = Cipher.getInstance(cipherInstance);
+            pbeCipher.init(Cipher.DECRYPT_MODE, sks, new IvParameterSpec(DatatypeConverter.parseBase64Binary(iv)));
 
-            for (int x = 0; x < iterations; x++)
-            {
-                md.reset();
-                input = md.digest(input);
-            }
-
-            response = Base64.getEncoder().encodeToString(input);
+            result = new String(pbeCipher.doFinal(DatatypeConverter.parseBase64Binary(property)));
+        }
+        catch (final InvalidKeyException ikx)
+        {
+            throw new SecurityException(ikx.getMessage(), ikx);
         }
         catch (final NoSuchAlgorithmException nsx)
         {
             throw new SecurityException(nsx.getMessage(), nsx);
         }
-        catch (final UnsupportedEncodingException uex)
+        catch (final NoSuchPaddingException npx)
         {
-            throw new SecurityException(uex.getMessage(), uex);
+            throw new SecurityException(npx.getMessage(), npx);
         }
+        catch (final IllegalBlockSizeException ibx)
+        {
+            throw new SecurityException(ibx.getMessage(), ibx);
+        }
+        catch (final BadPaddingException bpx)
+        {
+            throw new SecurityException(bpx.getMessage(), bpx);
+        }
+        catch (final InvalidKeySpecException iksx)
+        {
+            throw new SecurityException(iksx.getMessage(), iksx);
+        }
+        catch (InvalidAlgorithmParameterException iapx)
+        {
+        	throw new SecurityException(iapx.getMessage(), iapx);
+		}
 
-        return response;
+        return result;
     }
 
     /**
@@ -232,100 +256,11 @@ public final class PasswordUtils
 
         try
         {
-            String decoded = new String(PasswordUtils.base64Decode(value));
-            String iv = decoded.split(":")[0];
-            String property = decoded.split(":")[1];
+            String iv = value.split(":")[0];
+            String property = value.split(":")[1];
 
             SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(secretInstance);
             PBEKeySpec keySpec = new PBEKeySpec(salt.toCharArray(), salt.getBytes(), iterations, keyBits);
-            SecretKey keyTmp = keyFactory.generateSecret(keySpec);
-            SecretKeySpec sks = new SecretKeySpec(keyTmp.getEncoded(), algorithm);
-
-            Cipher pbeCipher = Cipher.getInstance(cipherInstance);
-            pbeCipher.init(Cipher.DECRYPT_MODE, sks, new IvParameterSpec(Base64.getDecoder().decode(iv)));
-            decPass = new String(pbeCipher.doFinal(Base64.getDecoder().decode(property)), encoding);
-        }
-        catch (final InvalidKeyException ikx)
-        {
-            throw new SecurityException(ikx.getMessage(), ikx);
-        }
-        catch (final NoSuchAlgorithmException nsx)
-        {
-            throw new SecurityException(nsx.getMessage(), nsx);
-        }
-        catch (final NoSuchPaddingException npx)
-        {
-            throw new SecurityException(npx.getMessage(), npx);
-        }
-        catch (final IllegalBlockSizeException ibx)
-        {
-            throw new SecurityException(ibx.getMessage(), ibx);
-        }
-        catch (final BadPaddingException bpx)
-        {
-            throw new SecurityException(bpx.getMessage(), bpx);
-        }
-        catch (final UnsupportedEncodingException uex)
-        {
-            throw new SecurityException(uex.getMessage(), uex);
-        }
-        catch (final InvalidAlgorithmParameterException iapx)
-        {
-            throw new SecurityException(iapx.getMessage(), iapx);
-        }
-        catch (final InvalidKeySpecException iksx)
-        {
-            throw new SecurityException(iksx.getMessage(), iksx);
-        }
-
-        return decPass;
-    }
-
-    /**
-     * Provides two-way (reversible) encryption of a provided string. Can be used where reversibility
-     * is required but encryption (obfuscation, technically) is required.
-     *
-     * @param value - The plain text data to encrypt
-     * @param salt - The salt value to utilize for the request
-     * @param secretInstance - The cryptographic instance to use for the SecretKeyFactory
-     * @param iterations - The number of times to loop through the keyspec
-     * @param keyBits - The size of the key, in bits
-     * @param algorithm - The algorithm to encrypt the data with
-     * @param cipherInstance - The cipher instance to utilize
-     * @param encoding - The text encoding
-     * @return The encrypted string in a reversible format
-     * @throws SecurityException {@link java.lang.SecurityException} if an exception occurs during processing
-     */
-    public static final String decryptText(final String value, final char[] password, final byte[] salt, final String secretInstance, final int iterations, final int keyBits, final String algorithm, final String cipherInstance, final String encoding) throws SecurityException
-    {
-        final String methodName = PasswordUtils.CNAME + "#encryptText(final String value, final String salt, final String secretInstance, final int iterations, final int keyBits, final String algorithm, final String cipherInstance, final String encoding) throws SecurityException";
-
-        if (DEBUG)
-        {
-            DEBUGGER.debug(methodName);
-            DEBUGGER.debug("Value: {}", secretInstance);
-            DEBUGGER.debug("Value: {}", iterations);
-            DEBUGGER.debug("Value: {}", keyBits);
-            DEBUGGER.debug("Value: {}", algorithm);
-            DEBUGGER.debug("Value: {}", cipherInstance);
-            DEBUGGER.debug("Value: {}", encoding);
-        }
-
-        String decPass = null;
-
-        try
-        {
-        	String decoded = PasswordUtils.base64Decode(value);
-            String iv = decoded.split(":")[0];
-            String property = decoded.split(":")[1];
-
-            System.out.println(value);
-            System.out.println(decoded);
-            System.out.println(iv);
-            System.out.println(property);
-
-            SecretKeyFactory keyFactory = SecretKeyFactory.getInstance(secretInstance);
-            PBEKeySpec keySpec = new PBEKeySpec(password, salt, iterations, keyBits);
             SecretKey keyTmp = keyFactory.generateSecret(keySpec);
             SecretKeySpec sks = new SecretKeySpec(keyTmp.getEncoded(), algorithm);
 
@@ -407,81 +342,5 @@ public final class PasswordUtils
         }
 
         return new String(Base64.getDecoder().decode(text.getBytes()));
-    }
-
-    /**
-     * Base64 decodes a given string
-     *
-     * @param variance - The allowed differences in OTP values
-     * @param algorithm - The algorithm to encrypt the data with
-     * @param instance - The security instance to utilize
-     * @param secret - The OTP secret
-     * @param code - The OTP code
-     * @return <code>true</code> if successful, <code>false</code> otherwise
-     * @throws SecurityException {@link java.lang.SecurityException} if an exception occurs during processing
-     */
-    public static final boolean validateOtpValue(final int variance, final String algorithm, final String instance, final String secret, final int code) throws SecurityException
-    {
-        final String methodName = PasswordUtils.CNAME + "#validateOtpValue(final int variance, final String algorithm, final String instance, final String secret, final int code) throws SecurityException";
-
-        if (DEBUG)
-        {
-            DEBUGGER.debug(methodName);
-            DEBUGGER.debug("Value: {}", variance);
-            DEBUGGER.debug("Value: {}", algorithm);
-            DEBUGGER.debug("Value: {}", instance);
-            DEBUGGER.debug("Value: {}", secret);
-            DEBUGGER.debug("Value: {}", code);
-        }
-
-        long truncatedHash = 0;
-        byte[] data = new byte[8];
-        long timeIndex = System.currentTimeMillis() / 1000 / 30;
-
-        final Base32 codec = new Base32();
-        final byte[] decoded = codec.decode(secret);
-        SecretKeySpec signKey = new SecretKeySpec(decoded, algorithm);
-
-        if (DEBUG)
-        {
-            DEBUGGER.debug("long: {}", timeIndex);
-        }
-
-        try
-        {
-            for (int i = 8; i-- > 0; timeIndex >>>= 8)
-            {
-                data[i] = (byte) timeIndex;
-            }
-
-            Mac mac = Mac.getInstance(instance);
-            mac.init(signKey);
-            byte[] hash = mac.doFinal(data);
-            int offset = hash[20 - 1] & 0xF;
-
-            for (int i = 0; i < 4; i++)
-            {
-                truncatedHash <<= 8;
-                truncatedHash |= (hash[offset + i] & 0xFF);
-            }
-
-            truncatedHash &= 0x7FFFFFFF;
-            truncatedHash %= 1000000;
-
-            if (DEBUG)
-            {
-                DEBUGGER.debug("truncatedHash: {}", truncatedHash);
-            }
-
-            return (truncatedHash == code);
-        }
-        catch (final InvalidKeyException ikx)
-        {
-            throw new SecurityException(ikx.getMessage(), ikx);
-        }
-        catch (final NoSuchAlgorithmException nsx)
-        {
-            throw new SecurityException(nsx.getMessage(), nsx);
-        }
     }
 }
